frontend/test/should_fail/cast_int_enum.grg
using cast_model;

rule r {
	modify {
	---
		eval {
			def var enu:ENU = (ENU)42;
		}
	}
}
